<resources>
    <string name="app_name">"Azamat Nigga"</string>
    <string name="MapKey" translatable="false">AIzaSyBj3odcpjCXtCJYct2sDqrjDVD7agJCeXs</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_address">Email address</string>
    <string name="email_hint">Eg namaemail@emailkamu.com</string>
    <string name="password">Password</string>
    <string name="password_hint">**** **** ****</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="login_with_google">Login with Google</string>
    <string name="full_name">Full Name</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="registration">Registration</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="skip">Skip</string>
    <string name="welcome_page_description">Before Enjoying Foodmedia Services Please Register First</string>
    <string name="welcome">Welcome</string>
    <string name="create_account">Create Account</string>
    <string name="terms_and_conditions_andprivacy">By Logging In Or Registering, You Have Agreed To The Terms And Conditions And Privacy Policy.</string>
    <string name="good_food_header">Good food at a cheap price</string>
    <string name="good_food_detail">You can eat at expensive restaurants with affordable price</string>
    <string name="favorites_menu">Select the Favorites Menu</string>
    <string name="favorites_menu_detail">Now eat well, don\'t leave the house,You can choose your favorite food only with one click</string>
    <string name="nearby_restaurants">Nearby restaurants</string>
    <string name="nearby_details">You don\'t have to go far to find a good restaurant, we have provided all the restaurants that is near you</string>
    <string name="forget_password">Forget Password</string>
    <string name="enter_email">Enter your registered email below</string>
    <string name="submit">Submit</string>
    <string name="remember_the_password">Remember the password?</string>
    <string name="sign_in">Sign In</string>
    <string name="success">Success</string>
    <string name="check_email">Please check your email for create a new password</string>
    <string name="cant_get_email">Can\'t get email?</string>
    <string name="resubmit">Resubmit</string>
    <string name="back_email">Back Email</string>
    <string name="change_new_password">Change New Password</string>
    <string name="enter_different_password">Enter a different password with the previous</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="password_changed">Congratulations your password has been changed,</string>
    <string name="today_new_arivable">Today New Arivable</string>
    <string name="food_list_update">Best of the today food list update</string>
    <string name="see_all"><![CDATA[See All >]]></string>
    <string name="todo">TODO</string>
    <string name="booking_restaurant">Booking Restaurant</string>
    <string name="book">Book</string>
    <string name="search">Search</string>
    <string name="location">Agrabad 435, Chittagong</string>
    <string name="navigaion_header">Navigaion Header</string>
    <string name="android_studio">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="home">home</string>
    <string name="gallery">gallery</string>
    <string name="slideshow">slideshow</string>
    <string name="name">Sardor Urdushev</string>
    <string name="email_address_ex">s.urdushev@mail.ru</string>
    <string name="account_settings">Account Settings</string>
    <string name="language">Language</string>
    <string name="feedback">Feedback</string>
    <string name="rate_us">Rate Us</string>
    <string name="new_version">New Version</string>
    <string name="logout">Logout</string>
    <string name="book_more">Book more</string>
    <string name="booking_history">Booking History</string>
    <string name="restaurant_details">Restaurant Details</string>
    <string name="restaurant_header">Tava Restaurant</string>
    <string name="open_today">Open Today</string>
    <string name="open_period">10:00 AM - 12:00 PM</string>
    <string name="visit_the_restaurant">Visit the Restaurant</string>
    <string name="Profile">Profile</string>
    <string name="Settings">Settings</string>
</resources>