<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.pages.RegistrationFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="24sp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvFullNameLabel"
                android:text="@string/full_name"
                android:textSize="14sp"
                android:textColor="@color/text_color"
                android:padding="12dp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_full_name"
                android:id="@+id/etFullName"
                android:padding="12dp"
                android:textSize="12sp"
                android:background="@drawable/edit_text_background"
                style="@style/Widget.AppCompat.EditText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvEmailLabel"
                android:text="@string/email_address"
                android:textColor="@color/text_color"
                android:textSize="14sp"
                android:textStyle="bold"
                android:padding="12dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_hint"
                android:id="@+id/etEmail"
                android:textSize="12sp"
                android:padding="12dp"
                android:background="@drawable/edit_text_background"
                style="@style/Widget.AppCompat.EditText"
                android:inputType="textEmailAddress" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_color"
                android:id="@+id/tvPasswordLabel"
                android:text="@string/password"
                android:textSize="14sp"
                android:textStyle="bold"
                android:padding="12dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:ellipsize="start"
                android:id="@+id/etPassword"
                android:padding="12dp"
                android:textSize="12sp"
                android:background="@drawable/edit_text_background"
                style="@style/Widget.AppCompat.EditText" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:layout_gravity="center_horizontal|bottom"
            android:id="@+id/llButtons">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registration"
                android:layout_margin="20dp"
                android:id="@+id/do_register"
                android:clickable="false"
                android:textColor="#9CA3AF"
                android:textAllCaps="false"
                style="?android:attr/borderlessButtonStyle"
                android:background="@drawable/button_click_disabled" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_with_google"
                android:layout_margin="20dp"
                android:clickable="false"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                android:textAllCaps="false"
                android:drawableStart="@drawable/ic_google"
                style="?android:attr/borderlessButtonStyle"
                android:background="@drawable/button_click_disabled" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>