<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ForgotPassword.EnterPasswordFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="24sp"
        tools:ignore="UselessParent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvForgetPasswordHeader"
            android:text="@string/change_new_password"
            android:layout_marginTop="50dp"
            android:textSize="20sp"
            android:textColor="@color/text_color"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvDetail"
            android:text="@string/enter_different_password"
            android:textColor="#9CA3AF"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tvNewPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:padding="12dp"
            android:text="@string/new_password"
            android:textColor="@color/text_color"
            android:textSize="14sp"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/etNewPassword"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_background"
            android:hint="@string/password_hint"
            android:padding="12dp"
            android:textSize="12sp"
            android:inputType="textPassword"
            android:autofillHints=""
            tools:ignore="TextFields" />

        <TextView
            android:id="@+id/tvConfirmPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:padding="12dp"
            android:text="@string/confirm_password"
            android:textColor="@color/text_color"
            android:textSize="14sp"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/etConfirmPassword"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_background"
            android:hint="@string/password_hint"
            android:padding="12dp"
            android:textSize="12sp"
            android:inputType="textPassword"
            android:autofillHints="" />
    </LinearLayout>

    <Button
        android:id="@+id/btnReset"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/button_click_disabled"
        android:clickable="false"
        android:text="@string/reset_password"
        android:layout_gravity="bottom"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="#9CA3AF" />

</FrameLayout>