<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6F6F6"
    tools:context=".ui.mainpage.pages.RestaurantDetailsFragment">

    <TextView
        android:id="@+id/restaurant_details_bar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/rounded_app_bar"
        android:gravity="center"
        android:text="@string/restaurant_details"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvMainDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="35dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/restaurant_details_bar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/tvRestaurantHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/restaurant_header"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/pointer"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_gravity="center"
                android:contentDescription="@string/todo"
                android:scaleType="fitCenter"
                android:src="@drawable/location_pointer"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvRestaurantHeader" />

            <TextView
                android:id="@+id/tvLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="70dp"
                android:gravity="center"
                android:text="@string/location"
                android:textSize="12sp"
                app:layout_constraintLeft_toRightOf="@id/pointer"
                app:layout_constraintTop_toBottomOf="@+id/tvRestaurantHeader" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cvRestaurant"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="8dp"
                app:cardCornerRadius="15dp"
                app:layout_constraintHeight_percent="0.65"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvLocation">

                <ImageView
                    android:id="@+id/ivrestaurant"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/todo"
                    android:scaleType="fitXY"
                    android:src="@drawable/the_car" />
            </androidx.cardview.widget.CardView>

            <ImageView
                android:id="@+id/clock"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_gravity="center"
                android:layout_marginStart="25dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/todo"
                android:scaleType="fitCenter"
                android:src="@drawable/timer"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/tvLocation"
                app:layout_constraintTop_toBottomOf="@id/cvRestaurant" />

            <TextView
                android:id="@+id/tvOpenToday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="70dp"
                android:gravity="center"
                android:text="@string/open_today"
                android:textSize="12sp"
                app:layout_constraintLeft_toRightOf="@id/clock"
                app:layout_constraintTop_toBottomOf="@+id/cvRestaurant" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:text="@string/open_period"
                android:textSize="12sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvOpenToday" />

            <TextView
                android:id="@+id/tvRoute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/visit_the_restaurant"
                android:textColor="#2C8DFF"
                android:textSize="12sp"
                android:drawablePadding="6dp"
                app:drawableLeftCompat="@drawable/route"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cvRestaurant" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_dialog"
        app:layout_constraintTop_toBottomOf="@id/cvMainDetails"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <TextView
                android:id="@+id/tvListHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/today_new_arivable"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvListDeatil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food_list_update"
                android:textSize="12sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvListHeader" />

            <TextView
                android:id="@+id/tvSeeAllList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/see_all"
                android:textSize="12sp"
                app:layout_constraintBottom_toTopOf="@id/rvRestaurantDetails"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvRestaurantDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvListDeatil" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>