<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="46dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.ForgotPassword.PasswordSuccessResetFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lottieCorrect"
            android:layout_gravity="center"
            app:lottie_fileName="correct.json"
            app:lottie_loop="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/tvSuccess"
            android:text="@string/success"
            android:textStyle="bold"
            android:textSize="24sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/tvCheckEmail"
            android:text="@string/password_changed"
            android:textSize="16sp"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnBackEmail"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textSize="14sp"
        android:background="@drawable/round_button"
        android:text="@string/sign_in"
        android:layout_gravity="bottom"
        android:textAllCaps="false"
        android:textColor="#FFFFFF" />

</FrameLayout>